--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,18 +1,16 @@
 .popup__input {
+  display: block;
   font-weight: normal;
   font-size: 14px;
-  line-height: 28px;
+  line-height: 14px;
   width: 100%;
-  padding: 0 0 3px;
+  padding: 0 0 9px;
   box-sizing: border-box;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  margin-bottom: 4px;
 }
 
 
 .popup__input:focus {
   outline: 0;
-  border-radius: 4px;
-  box-shadow: 0 0 4px 1px royalblue;
 }
