--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,4 +1,5 @@
 .popup__submit-button {
+  display: block;
   width: 100%;
   height: 50px;
   background-color: #000;
