--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,5 @@
 .popup__title {
-  margin: 0 0 42px;
+  margin: 0 0 46px;
   font-size: 24px;
   line-height: 29px;
 }
@@ -8,6 +8,6 @@
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin-bottom: 69px;
+    margin-bottom: 74px;
   }
 }
